# Pdf_hub

PDF/: .replit  db.sqlite3  pyproject.toml  replit.md
PDF/converter/: models.py  urls.py  views.py
PDF/converter/migrations/: 0001_initial.py
PDF/converter/templates/converter/: base.html  history.html  home.html  image_to_pdf.html  ocr_extraction.html  ocr_result.html  pdf_merge.html  pdf_password.html  pdf_to_ppt.html
PDF/pdf_processor/: settings.py  urls.py
